--- a/redirect.html
+++ b/redirect.html
@@ -17,8 +17,11 @@
 
   <script>
     const params = new URLSearchParams(window.location.search);
-    const code = params.get('code');
-    const state = params.get('state');
+    // const code = params.get('code');
+    // const state = params.get('state');
+
+      const code = 'asdasdasdas;
+    const state = 'DCEeFWf45A53sdfKef424';
 
     if (code && state) {
       const redirectUrl = `demotesting://auth/linkedin?code=${encodeURIComponent(code)}&state=${encodeURIComponent(state)}`;
